--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         >اینستاگرام</a
       >
       <a
-        href="https://eitaa.com/heidari_stationery"
+        href="https://ble.ir/heidari_stationery"
         target="_blank"
-        aria-label="کانال ایتا فروشگاه حیدری"
-        >ایتا</a
+        aria-label="کانال بله فروشگاه حیدری"
+        >بله</a
       >
     </div>
     </div>
@@ -51,3 +51,4 @@
     </div>
   </body>
 </html>
+
